Fix pre formatting on mobile

--- a/sass/spectre.scss
+++ b/sass/spectre.scss
@@ -25,7 +25,6 @@
 pre {
     padding: 0.5rem 0.5rem;
     border-radius: .3rem;
-    white-space: pre-wrap;
     overflow-y: auto;
 }
 
